--- a/index.html
+++ b/index.html
@@ -14,20 +14,85 @@
     </head>
     <body>
         <main>
-            <h1 id="title">Survey Form</h1>
-            <p id="description">description</p>
+            <h1 id="title">Order Your Favorite Burger</h1>
+            <img src="burger.svg" id="burger" alt="burger">
+            <p id="description">Best burgers in the town!</p>
             <form id="survey-form">
-                <label for="name" id="name-label">Name:</label>
-                <input type="text" id="name">
+                <section class="Data-inputs">
+                    <section>
+                        <label for="name" id="name-label">Name:</label>
+                        <input type="text" id="name" placeholder="Your name" required>
+                    </section>
+                    <hr>
+                    <section>
+                        <label for="address" id="address-label">Address:</label>
+                        <input type="text" id="address" placeholder="Your address" required>
+                    </section>
+                    <hr>
+                    <section>
+                        <label for="email" id="email-label">Email:</label>
+                        <input type="email" id="email" placeholder="example@example.com" required>
+                    </section>
+                    <hr>
+                    <section>
+                        <label for="number" id="number-label">Phone number:</label>
+                        <input type="number" id="number" placeholder="Your phone number" minlength="3" maxlength="11" min="100" max="99999999999">
+                    </section>
+                    <hr>
+                    <section class="cooked">
+                        <label for="doneness">How do you want your patty cooked?</label><br>
+                        <span>Rare</span>
+                        <input type="range" name="doneness" id="doneness" value="3" min="1" max="5">
+                        <span>Well-Done</span>
+                    </section>
+                    <hr>
 
-                <label for="email" id="email-label">Email:</label>
-                <input type="email" id="email">
+                    <section class="patties">
+                        <label for="amount">How many patties would you like?</label>
+                        <input type="number" name="amount" id="amount" value="1" min="1" max="99" required>
 
-                <label for="number" id="number-label">Phone number:</label>
-                <input type="tel" id="number" min="3" max="11">
+                    </section>
 
-                <label for="dropdown" id="dropdown-label">Dropdown:</label>
-                <select id="dropdown">dropdown</select>
+                    <hr>
+                    <label for="dropdown" id="dropdown-label">What type of bun would you like?</label>
+                    <select id="dropdown">
+                        <option value="Sesame">Sesame</option>
+                        <option value="Pretzel">Pretzel</option>
+                        <option value="Potato">Potato</option>
+                    </select>
+                </section>
+
+                <hr>
+
+                <section class="radioButton">
+                    <label for="radioButton">Would you like to add extra cheese?</label><br>
+                    <input type="radio" id="radioButtonChoice1" name="radioButton" value="1">
+                    <label for="radioButtonChoice1">Yes</label>
+                    <input type="radio" id="radioButtonChoice1" name="radioButton" value="2">
+                    <label for="radioButtonChoice2">No</label>
+                    <!-- <input type="radio" id="radioButtonChoice1" name="radioButton" value="3">
+                    <label for="radioButtonChoice3">3</label> -->
+                </section>
+                <hr>
+
+                <section class="ckbox">
+                    <label for="ckbox">What toppings would you like?</label><br>
+                    <input type="checkbox" id="checkBox1" name="checkBox1" value="onion">
+                    <label for="checkBox1">Onion</label><br>
+                    <input type="checkbox" id="checkBox2" name="checkBox2" value="tomato">
+                    <label for="checkBox2">Tomato</label><br>
+                    <input type="checkbox" id="checkBox3" name="checkBox3" value="lettuce">
+                    <label for="checkBox3">Lettuce</label><br>
+                </section>
+
+                <hr>
+
+                <section class="Options">
+                    <label for="comment">Anything else you want to add?</label> 
+                    <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+                    <hr>
+                    <input type="submit" id="submit">
+                </section> 
 
             </form>
 
