--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
                         <label for="name" id="name-label">Name:</label>
                         <input type="text" id="name" placeholder="Your name" required>
                     </section>
-                    <hr>
-                    <section>
-                        <label for="address" id="address-label">Address:</label>
-                        <input type="text" id="address" placeholder="Your address" required>
-                    </section>
+
                     <hr>
                     <section>
                         <label for="email" id="email-label">Email:</label>
@@ -86,6 +82,18 @@
                 </section>
 
                 <hr>
+
+                <div>    
+                    <span class='star'></span>
+                    <span class='star'></span>
+                    <span class='star'></span>
+                    <span class='star'></span>
+                    <span class='star'></span>    
+                    </div>
+
+                <hr>
+
+
 
                 <section class="Options">
                     <label for="comment">Anything else you want to add?</label> 
